--- a/EasyReantalCarSystem_FrontEnd/assets/css/styles.css
+++ b/EasyReantalCarSystem_FrontEnd/assets/css/styles.css
@@ -1,8 +1,3 @@
-#bgImg{
-    height: 100vh;
-    width: 100%;
-}
-
 #btn {
     display: flex;
     justify-content: space-between;
@@ -38,7 +33,7 @@
     height: 120px;
     display: inline-block;
     position: absolute;
-    color: black;
+    color: white;
     margin: auto;
     left: 0;
     right: 0;
